--- a/dev-media-server/Presentation/Devfreco.MediaServer.Api/Devfreco.MediaServer.Api.csproj
+++ b/dev-media-server/Presentation/Devfreco.MediaServer.Api/Devfreco.MediaServer.Api.csproj
@@ -18,6 +18,7 @@
         <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.2.2" />
         <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
         <PackageReference Include="Serilog.AspNetCore" Version="3.4.0" />
+        <PackageReference Include="System.Net.Http" Version="4.3.4" />
         <PackageReference Include="System.Runtime.Caching" Version="6.0.0" />
     </ItemGroup>
 
