--- a/src/Presentation/Devfreco.MediaServer.Api/appsettings.json
+++ b/src/Presentation/Devfreco.MediaServer.Api/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
     "Mongo": "mongodb://mehmet:123@127.0.0.1:27017/dev-media-server",
-    "Database": "elearning"
+    "Database": "dev-media-server"
   },
   "ApiVersion": {
     "MajorVersion": 1,
