--- a/src/Libraries/Service/Dev.Services/Dev.Services.csproj
+++ b/src/Libraries/Service/Dev.Services/Dev.Services.csproj
@@ -1,50 +1,51 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
-    <PropertyGroup>
-        <TargetFramework>net5.0</TargetFramework>
-        <ImplicitUsings>enable</ImplicitUsings>
-        <Nullable>enable</Nullable>
-        <LangVersion>preview</LangVersion>
-    </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net5.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
+		<LangVersion>preview</LangVersion>
+	</PropertyGroup>
 
-    <ItemGroup>
+	<ItemGroup>
 
-        <Reference Include="Dev.Core, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
-            <HintPath>..\..\..\Devfreco.Referance\Dev.Core.dll</HintPath>
-        </Reference>
-        <Reference Include="Dev.Data, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
-            <HintPath>..\..\..\Devfreco.Referance\Dev.Data.dll</HintPath>
-        </Reference>
-        <Reference Include="Dev.Framework, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
-            <HintPath>..\..\..\Devfreco.Referance\Dev.Framework.dll</HintPath>
-        </Reference>
-        <Reference Include="Dev.Mongo, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
-            <HintPath>..\..\..\Devfreco.Referance\Dev.Mongo.dll</HintPath>
-        </Reference>
-    </ItemGroup>
+		<Reference Include="Dev.Core, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
+			<HintPath>..\..\..\Devfreco.Referance\Dev.Core.dll</HintPath>
+		</Reference>
+		<Reference Include="Dev.Data, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
+			<HintPath>..\..\..\Devfreco.Referance\Dev.Data.dll</HintPath>
+		</Reference>
+		<Reference Include="Dev.Framework, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
+			<HintPath>..\..\..\Devfreco.Referance\Dev.Framework.dll</HintPath>
+		</Reference>
+		<Reference Include="Dev.Mongo, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
+			<HintPath>..\..\..\Devfreco.Referance\Dev.Mongo.dll</HintPath>
+		</Reference>
+	</ItemGroup>
 
-    <ItemGroup>
-        <ProjectReference Include="..\..\Data\Dev.Data.Mongo\Dev.Data.Mongo.csproj" />
-        <ProjectReference Include="..\..\Dto\Dev.Dto.Mongo\Dev.Dto.Mongo.csproj" />
-    </ItemGroup>
-    <ItemGroup>
-        <PackageReference Include="MailKit" Version="2.15.0" />
-        <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
-        <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="5.0.0" />
-        <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.0" />
-        <PackageReference Include="Microsoft.Extensions.FileProviders.Abstractions" Version="5.0.0" />
-        <PackageReference Include="Microsoft.AspNetCore.Hosting.Abstractions" Version="2.2.0" />
-        <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.9" />
-        <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
-        <PackageReference Include="Microsoft.Extensions.FileProviders.Abstractions" Version="5.0.0" />
-        <PackageReference Include="Microsoft.Extensions.FileProviders.Physical" Version="5.0.0" />
-        <PackageReference Include="Microsoft.Win32.Registry" Version="5.0.0" />
-        <PackageReference Include="MongoDB.Driver" Version="2.13.1" />
-        <PackageReference Include="MongoDB.Driver.GridFS" Version="2.13.1" />
-        <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-        <PackageReference Include="System.IO.FileSystem.AccessControl" Version="5.0.0" />
-        <PackageReference Include="System.Drawing.Common" Version="5.0.0" />
-        <PackageReference Include="MongoDB.Bson" Version="2.13.1" />
-        <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
-    </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\..\Data\Dev.Data.Mongo\Dev.Data.Mongo.csproj" />
+		<ProjectReference Include="..\..\Dto\Dev.Dto.Mongo\Dev.Dto.Mongo.csproj" />
+	</ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="MailKit" Version="2.15.0" />
+		<PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="5.0.0" />
+		<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.0" />
+		<PackageReference Include="Microsoft.Extensions.FileProviders.Abstractions" Version="5.0.0" />
+		<PackageReference Include="Microsoft.AspNetCore.Hosting.Abstractions" Version="2.2.0" />
+		<PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.9" />
+		<PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
+		<PackageReference Include="Microsoft.Extensions.FileProviders.Abstractions" Version="5.0.0" />
+		<PackageReference Include="Microsoft.Extensions.FileProviders.Physical" Version="5.0.0" />
+		<PackageReference Include="Microsoft.Win32.Registry" Version="5.0.0" />
+		<PackageReference Include="MongoDB.Driver" Version="2.13.1" />
+		<PackageReference Include="MongoDB.Driver.GridFS" Version="2.13.1" />
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+		<PackageReference Include="System.IO.FileSystem.AccessControl" Version="5.0.0" />
+		<PackageReference Include="System.Drawing.Common" Version="5.0.0" />
+		<PackageReference Include="MongoDB.Bson" Version="2.13.1" />
+		<PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+		<PackageReference Include="Xabe.FFMpeg" Version="3.1.0" />
+	</ItemGroup>
 </Project>
