--- a/src/Presentation/Devfreco.MediaServer.Api/Devfreco.MediaServer.Api.csproj
+++ b/src/Presentation/Devfreco.MediaServer.Api/Devfreco.MediaServer.Api.csproj
@@ -44,4 +44,19 @@
         </Reference>
     </ItemGroup>
 
+    <ItemGroup>
+      <Content Update="FFmpeg\version.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </Content>
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Update="FFmpeg\ffmpeg.exe">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="FFmpeg\ffprobe.exe">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+    </ItemGroup>
+
 </Project>
