--- a/src/Presentation/Devfreco.MediaServer.Api/appsettings.json
+++ b/src/Presentation/Devfreco.MediaServer.Api/appsettings.json
@@ -21,5 +21,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "MediaSetting": {
+    "FilesStoredIntoDatabase": false
+  }
 }
