--- a/src/Presentation/Devfreco.MediaServer.Api/appsettings.Production.json
+++ b/src/Presentation/Devfreco.MediaServer.Api/appsettings.Production.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Mongo": "mongodb://seyir:seyir!?_1234@127.0.0.1:27017/dev-media-server",
+    "Mongo": "mongodb://mehmet:123@127.0.0.1:27017/dev-media-server",
     "Database": "dev-media-server"
   },
   "ApiVersion": {
